<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:background="@color/colorDefaultBackgView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.activity.NewOrderActivity">

    <ScrollView >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edtOrdersNewOrderID"
                android:padding="7dp"
                android:layout_margin="3dp"
                android:hint="@string/neworder_orderid"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edtOrdersNewEmployeeID"
                android:padding="7dp"
                android:layout_margin="3dp"
                android:singleLine="true"
                android:hint="@string/neworder_employeeid"/>

            <TextView android:paddingTop="@dimen/public_padding"
                android:textSize="@dimen/public_textSize_title"
                android:layout_margin="3dp"
                android:text="@string/neworder_aboutcustomer"/>

            <Button android:padding="7dp"
                android:id="@+id/btnOrdersNewCustomerNameID"
                android:layout_margin="3dp"
                android:textSize="@dimen/public_textSize"
                android:text="@string/neworder_customernameid"
                style="?android:attr/spinnerStyle"/>

            <TextView
                android:layout_margin="3dp"
                android:text="@string/neworder_address1"
                android:hint="@string/neworder_address1"/>

            <EditText android:padding="7dp"
                android:id="@+id/edtOrdersNewCustomerAddress1"
                android:layout_margin="3dp"
                android:singleLine="true"/>

            <TextView
                android:layout_margin="3dp"
                android:text="@string/neworder_address2" />

            <EditText android:padding="7dp"
                android:id="@+id/edtOrdersNewCustomerAddress2"
                android:layout_margin="3dp"
                android:singleLine="true"/>

            <TextView
                android:layout_margin="3dp"
                android:text="@string/neworder_needbydate" />

            <EditText android:padding="7dp"
                android:id="@+id/edtOrdersNewNeedByDate"
                android:layout_margin="3dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"
                android:singleLine="true"
                android:hint="2019-11-21"/>
        </TableLayout>
    </ScrollView>


</TableLayout>