<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:weightSum="38"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:background="@color/colorDefaultBackgView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
            android:layout_weight="36"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TableRow android:padding="7dp">
                <TextView android:layout_weight="1"
                    android:textSize="@dimen/public_textSize"
                    android:text="@string/neworder_total_tax" />

                <TextView
                    android:textSize="@dimen/public_textSize"
                    android:id="@+id/txtOrderNewTotalTaxPer"
                    android:text="0" />
            </TableRow>

        <TableRow android:padding="7dp">
            <TextView android:layout_weight="1"
                android:textSize="@dimen/public_textSize"
                android:text="@string/neworder_total_totaltax" />

            <TextView
                android:textSize="@dimen/public_textSize"
                android:id="@+id/txtOrderNewTotalTaxMoney"
                android:text="0" />
        </TableRow>

            <TableRow android:padding="7dp">
                <TextView android:layout_weight="1"
                    android:textSize="@dimen/public_textSize"
                    android:text="@string/neworder_total_discountpercen" />
                <TextView
                    android:textSize="@dimen/public_textSize"
                    android:id="@+id/txtOrderNewTotalDiscountPer"
                    android:text="Value"/>
            </TableRow>

        <TableRow android:padding="7dp">
            <TextView android:layout_weight="1"
                android:textSize="@dimen/public_textSize"
                android:text="@string/neworder_total_discountmoney" />
            <TextView
                android:textSize="@dimen/public_textSize"
                android:id="@+id/txtOrderNewTotalDiscountMoney"
                android:text="Value"/>
        </TableRow>

        </TableLayout>

    <LinearLayout
        android:layout_weight="2"
        android:layout_marginBottom="5dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_weight="3"
            android:text="@string/neworder_total_totalorder"
            android:textSize="@dimen/public_textSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="@dimen/public_textSize"
            android:id="@+id/txtOrderNewTotalMoneyTotal"
            android:textColor="#C42A20"
            android:gravity="right"
            android:layout_weight="2"
            android:text="MONNEY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>