<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefaultBackgView"
    android:weightSum="27"
    tools:context=".Views.activity.NewOrderActivity">

    <TableLayout
        android:layout_weight="26"
        android:id="@+id/tableLayoutNewOrderProduct"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/btnNewOrderProductGetProduct"
            android:paddingLeft="10dp"
            android:text="@string/neworder_product_chooseproduct"
            android:textSize="@dimen/public_textSize"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            style="?android:attr/spinnerStyle"/>

        <TextView android:id="@+id/txtNewOrderProductGetQuantity"/>

        <EditText android:id="@+id/edtNewOrderProductQuantity"
            android:hint="@string/neworder_product_hintquantity"/>

        <Button android:id="@+id/btnNewOrderProductAdd"
            android:text="@string/neworder_product_buttonadd"/>


        <ListView
            android:layout_marginTop="10dp"
            android:background="@drawable/login_custom"
            android:id="@+id/lvNewOrderProduct" />

    </TableLayout>

    <TextView
        android:id="@+id/txtNewOrderProductTotal"
        android:textColor="#C42A20"
        android:gravity="right"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="This is total monney"/>

</LinearLayout>