<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearOrderNew"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_above="@+id/layoutButton"
        android:id="@+id/frameLayourNewOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-5dp"
        android:orientation="vertical"
        android:id="@+id/layoutButton"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-6dp">

            <Button
                android:id="@+id/btnNewOrderPrev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/public_button_bacground"
                android:text="@string/neworder_text_buttonClear" />

            <Button
                android:id="@+id/btnNewOrderNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/public_button_bacground"
                android:text="@string/neworder_text_buttonNext" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNewOrderSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="saveOffline"
            android:text="@string/neworder_text_saveorder"
            android:textColor="@color/textSave"
            android:visibility="invisible" />
    </LinearLayout>

</RelativeLayout>